compiler/parser/parser.output
Terminals unused in grammar

   EQUAL
   COLON
   COMMA


State 29 conflicts: 2 shift/reduce


Grammar

    0 $accept: program "end of file"

    1 program: block
    2        | program block

    3 block: line

    4 line: expression EOL
    5     | expression "end of file"

    6 expression: term
    7           | expression PLUS term
    8           | expression MINUS term
    9           | FUNCTION_DEFINE IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS EOL program RETURN expression

   10 term: literal
   11     | term ASTERISK literal
   12     | term SLASH literal

   13 literal: FLOAT_LITERAL
   14        | INT_LITERAL
   15        | STRING_LITERAL


Terminals, with rules where they appear

"end of file" (0) 0 5
error (256)
FUNCTION_DEFINE (258) 9
RETURN (259) 9
IDENTIFIER (260) 9
EQUAL (261)
PLUS (262) 7
MINUS (263) 8
ASTERISK (264) 11
SLASH (265) 12
COLON (266)
COMMA (267)
LEFT_PARENTHESIS (268) 9
RIGHT_PARENTHESIS (269) 9
EOL (270) 4 9
INT_LITERAL (271) 14
FLOAT_LITERAL (272) 13
STRING_LITERAL (273) 15


Nonterminals, with rules where they appear

$accept (19)
    on left: 0
program (20)
    on left: 1 2, on right: 0 2 9
block (21)
    on left: 3, on right: 1 2
line (22)
    on left: 4 5, on right: 3
expression (23)
    on left: 6 7 8 9, on right: 4 5 7 8 9
term (24)
    on left: 10 11 12, on right: 6 7 8 11 12
literal (25)
    on left: 13 14 15, on right: 10 11 12


State 0

    0 $accept: . program "end of file"

    FUNCTION_DEFINE  shift, and go to state 1
    INT_LITERAL      shift, and go to state 2
    FLOAT_LITERAL    shift, and go to state 3
    STRING_LITERAL   shift, and go to state 4

    program     go to state 5
    block       go to state 6
    line        go to state 7
    expression  go to state 8
    term        go to state 9
    literal     go to state 10


State 1

    9 expression: FUNCTION_DEFINE . IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS EOL program RETURN expression

    IDENTIFIER  shift, and go to state 11


State 2

   14 literal: INT_LITERAL .

    $default  reduce using rule 14 (literal)


State 3

   13 literal: FLOAT_LITERAL .

    $default  reduce using rule 13 (literal)


State 4

   15 literal: STRING_LITERAL .

    $default  reduce using rule 15 (literal)


State 5

    0 $accept: program . "end of file"
    2 program: program . block

    "end of file"    shift, and go to state 12
    FUNCTION_DEFINE  shift, and go to state 1
    INT_LITERAL      shift, and go to state 2
    FLOAT_LITERAL    shift, and go to state 3
    STRING_LITERAL   shift, and go to state 4

    block       go to state 13
    line        go to state 7
    expression  go to state 8
    term        go to state 9
    literal     go to state 10


State 6

    1 program: block .

    $default  reduce using rule 1 (program)


State 7

    3 block: line .

    $default  reduce using rule 3 (block)


State 8

    4 line: expression . EOL
    5     | expression . "end of file"
    7 expression: expression . PLUS term
    8           | expression . MINUS term

    "end of file"  shift, and go to state 14
    PLUS           shift, and go to state 15
    MINUS          shift, and go to state 16
    EOL            shift, and go to state 17


State 9

    6 expression: term .
   11 term: term . ASTERISK literal
   12     | term . SLASH literal

    ASTERISK  shift, and go to state 18
    SLASH     shift, and go to state 19

    $default  reduce using rule 6 (expression)


State 10

   10 term: literal .

    $default  reduce using rule 10 (term)


State 11

    9 expression: FUNCTION_DEFINE IDENTIFIER . LEFT_PARENTHESIS RIGHT_PARENTHESIS EOL program RETURN expression

    LEFT_PARENTHESIS  shift, and go to state 20


State 12

    0 $accept: program "end of file" .

    $default  accept


State 13

    2 program: program block .

    $default  reduce using rule 2 (program)


State 14

    5 line: expression "end of file" .

    $default  reduce using rule 5 (line)


State 15

    7 expression: expression PLUS . term

    INT_LITERAL     shift, and go to state 2
    FLOAT_LITERAL   shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4

    term     go to state 21
    literal  go to state 10


State 16

    8 expression: expression MINUS . term

    INT_LITERAL     shift, and go to state 2
    FLOAT_LITERAL   shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4

    term     go to state 22
    literal  go to state 10


State 17

    4 line: expression EOL .

    $default  reduce using rule 4 (line)


State 18

   11 term: term ASTERISK . literal

    INT_LITERAL     shift, and go to state 2
    FLOAT_LITERAL   shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4

    literal  go to state 23


State 19

   12 term: term SLASH . literal

    INT_LITERAL     shift, and go to state 2
    FLOAT_LITERAL   shift, and go to state 3
    STRING_LITERAL  shift, and go to state 4

    literal  go to state 24


State 20

    9 expression: FUNCTION_DEFINE IDENTIFIER LEFT_PARENTHESIS . RIGHT_PARENTHESIS EOL program RETURN expression

    RIGHT_PARENTHESIS  shift, and go to state 25


State 21

    7 expression: expression PLUS term .
   11 term: term . ASTERISK literal
   12     | term . SLASH literal

    ASTERISK  shift, and go to state 18
    SLASH     shift, and go to state 19

    $default  reduce using rule 7 (expression)


State 22

    8 expression: expression MINUS term .
   11 term: term . ASTERISK literal
   12     | term . SLASH literal

    ASTERISK  shift, and go to state 18
    SLASH     shift, and go to state 19

    $default  reduce using rule 8 (expression)


State 23

   11 term: term ASTERISK literal .

    $default  reduce using rule 11 (term)


State 24

   12 term: term SLASH literal .

    $default  reduce using rule 12 (term)


State 25

    9 expression: FUNCTION_DEFINE IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS . EOL program RETURN expression

    EOL  shift, and go to state 26


State 26

    9 expression: FUNCTION_DEFINE IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS EOL . program RETURN expression

    FUNCTION_DEFINE  shift, and go to state 1
    INT_LITERAL      shift, and go to state 2
    FLOAT_LITERAL    shift, and go to state 3
    STRING_LITERAL   shift, and go to state 4

    program     go to state 27
    block       go to state 6
    line        go to state 7
    expression  go to state 8
    term        go to state 9
    literal     go to state 10


State 27

    2 program: program . block
    9 expression: FUNCTION_DEFINE IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS EOL program . RETURN expression

    FUNCTION_DEFINE  shift, and go to state 1
    RETURN           shift, and go to state 28
    INT_LITERAL      shift, and go to state 2
    FLOAT_LITERAL    shift, and go to state 3
    STRING_LITERAL   shift, and go to state 4

    block       go to state 13
    line        go to state 7
    expression  go to state 8
    term        go to state 9
    literal     go to state 10


State 28

    9 expression: FUNCTION_DEFINE IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS EOL program RETURN . expression

    FUNCTION_DEFINE  shift, and go to state 1
    INT_LITERAL      shift, and go to state 2
    FLOAT_LITERAL    shift, and go to state 3
    STRING_LITERAL   shift, and go to state 4

    expression  go to state 29
    term        go to state 9
    literal     go to state 10


State 29

    7 expression: expression . PLUS term
    8           | expression . MINUS term
    9           | FUNCTION_DEFINE IDENTIFIER LEFT_PARENTHESIS RIGHT_PARENTHESIS EOL program RETURN expression .

    PLUS   shift, and go to state 15
    MINUS  shift, and go to state 16

    PLUS      [reduce using rule 9 (expression)]
    MINUS     [reduce using rule 9 (expression)]
    $default  reduce using rule 9 (expression)
